--- a/public/global.css
+++ b/public/global.css
@@ -4,13 +4,11 @@ html, body {
 	height: 100%;
 }
 
-body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
+/* body {
+    display: grid;
+} */
+
+
 
 a {
 	color: rgb(0,100,200);
@@ -18,7 +16,7 @@ a {
 }
 
 a:hover {
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 a:visited {
@@ -60,4 +58,31 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+/* ------------------ */
+* {
+    /* font-family: NanumSquareNeo-Variable; */
+    font-family: Pretendard;
+    /* font-family: SCDream; */
+    font-weight: 300;
+    letter-spacing: -0.5px;
+}
+@font-face {
+    font-family: 'NanumSquareNeo-Variable';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@media (min-width: 769px) { 
+    .layout-mobile {
+        display:none;
+    }
+}
+
+@media (max-width: 768px) {
+    .layout-wide {
+        display: none;
+    }
 }
